tests/ui/associated-type-bounds/return-type-notation/equality.stderr
error: return type notation is not allowed to use type equality
  --> $DIR/equality.rs:11:18
   |
LL | fn test<T: Trait<method(..) = Box<dyn Future<Output = ()>>>>() {}
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

